[package]
name = "client-cpp"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
edition = "2018"

[lib]
name = "tikv_client_rust"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
cxx = "=1.0.75"
futures = "0.3"
once_cell = "1.9.0"
slog = {version = "2.7.0", features = ["max_level_debug", "release_max_level_debug"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros" ] }
# env_logger = "0.9"
tikv-client = { git = "https://github.com/bxq2011hust/tikv-client-rust.git", rev = "46cec3fde00e9e8f5d12b9e6a2f0abfbc9def8be" }
