[package]
name = "client-cpp"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
edition = "2018"

[lib]
name = "tikv_client_rust"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
cxx = "=1.0.75"
futures = "0.3"
once_cell = "1.9.0"
slog = {version = "2.7.0", features = ["max_level_debug", "release_max_level_warn"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
log = {version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
chrono = "0.4.22"
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros" ] }
# env_logger = "0.9"
tikv-client = { git = "https://github.com/FISCO-BCOS/tikv-client-rust.git", rev = "8b628485fee1871cdb15e4fc1cd8ebdbacf90541" }
