[package]
name = "client-cpp"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
edition = "2018"

[lib]
name = "tikvrust"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
cxx = "=1.0.75"
futures = "0.3"
once_cell = "1.9.0"

log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
chrono = "0.4.22"
tokio = { version = "=1.28.2", features = ["full"] }
env_logger = "0.9"
# tikv-client = { path = "../tikv-client-rust" }
tikv-client = { git = "https://github.com/FISCO-BCOS/tikv-client-rust.git", rev = "de5fb411a10ff92ea75d6cf382a0fdffa8c6955a" }

[build-dependencies]
cxx-build = "1.0.18"
